# youqu3-dragon

./: README.md  pyproject.toml
youqu3_dragon/: __version__.py  config.py  dragon.py  get_form.py  main.py
youqu3_dragon/static/hello/: style.css
youqu3_dragon/templates/: hello.html
