[project]
name = "youqu3-web"
description = "youqu3-web"
authors = [
    { name = "mikigo", email = "huangmingqiang@uniontech.com" },
]
dependencies = [
    "fastapi",
    "jinja2",
]
dynamic = ["version"]

requires-python = ">=3.7"
readme = "README.md"
license = { text = "GPL2.0" }

[project.scripts]
youqu3-dragon = "youqu3_dragon.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch]
version = { path = "youqu3_dragon/__version__.py" }

[tool.hatch.build.targets.wheel]
packages = [
    "/youqu3_dragon",
]